Bug 225165 - kdegames - SameGame Won't Display Score in Status Bar
Summary: kdegames - SameGame Won't Display Score in Status Bar
Status: RESOLVED FIXED
Alias: None
Product: kde
Classification: I don't know
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-01 17:45 UTC by Andrew Chesnutt
Modified: 2010-02-01 22:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Chesnutt 2010-02-01 17:45:40 UTC
Version:           4.3.2 (using KDE 4.3.2)
OS:                Linux
Installed from:    Debian stable Packages

My original bug report was submitted to: https://bugs.launchpad.net/bugs/512003. They responded that this looks like a KDE problem and not an issue with SameGame.

Status in “kdegames” package in Ubuntu: Invalid

Bug description:
Binary package hint: kdegames

As you are playing SameGame, the score is not displayed in the status bar, nor does the "Marked" section of the status bar update. The score is displayed correctly once the game is finished.

Kubuntu version: 9.10
Package: kdegames version 4:4.3.2-0ubuntu1

ProblemType: Bug
Architecture: i386
Date: Sun Jan 24 02:34:10 2010
DistroRelease: Ubuntu 9.10
ExecutablePath: /usr/games/ksame
Package: ksame 4:4.3.2-0ubuntu1
ProcEnviron:
PATH=(custom, no user)
LANG=en_US.UTF-8
SHELL=/bin/bash
ProcVersionSignature: Ubuntu 2.6.31-17.54-generic
SourcePackage: kdegames
Uname: Linux 2.6.31-17-generic i686
XsessionErrors:
(polkit-gnome-authentication-agent-1:2430): GLib-CRITICAL **: g_once_init_leave: assertion `initialization_value != 0' failed
(firefox:2713): GLib-WARNING **: g_set_prgname() called multiple times
Comment 1 Christoph Feck 2010-02-01 22:32:43 UTC
SVN commit 1083747 by cfeck:

Show score in statusbar

BUG: 225165


 M  +1 -1      mainwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1083747
Comment 2 Christoph Feck 2010-02-01 22:38:27 UTC
SVN commit 1083749 by cfeck:

Show score in statusbar (backport r1083747)

CCBUG: 225165
CCMAIL: kde-games-bugs@kde.org


 M  +1 -1      mainwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1083749