Show score in statusbar

BUG: 225165


git-svn-id: svn+ssh://svn.kde.org/home/kde/trunk/KDE/kdegames@1083747 283d02a7-25f6-0310-bc7c-ecb5cbfe19da